--- a/app/templates/user_public.html
+++ b/app/templates/user_public.html
@@ -9,10 +9,10 @@
     {{ render_badges(user, '22px') }}
   </h3>
   <div class="d-flex gap-2">
-    <a class="btn btn-outline-light" href="/messages/start?user_id={{ user.id }}">أرسل رسالة</a>
+    <a class="btn btn-outline-light" href="/messages/start?user_id={{ user.id }}">Send Message</a>
   </div>
 </div>
 
-{# ... بقية صفحتك كما هي ... #}
+{# ... rest of your page as is ... #}
 
 {% endblock %}
